EliteMobs 10.0.1 - [New] Spanish & French translations have been fully remade and updated for EliteMobs 10! Other languages still processing. Did you know 10 years ago this would've cost €400,000 plus tax to do for all of them? Fun. - [New] Armor skill health bonus toggle! New armorSkillHealthBonusEnabled option in skills.yml lets server owners disable the extra-hearts-per-armor-level mechanic entirely. A companion forceDefaultHealthWhenArmorSkillHealthBonusDisabled option can hard-reset players to vanilla 20 HP. - [New] Skills page is now interactive — clicking a skill type on the player status screen opens the skill bonus selection menu for that weapon/armor category directly. - [New] /em spawn elite command split — the base command now works cleanly as /em spawn elite <entityType> <level>, while a separate /em spawn elite <entityType> <level> <powers...> variant handles power assignment. - [New] Item frame damage protection in dungeon worlds — item frames in EliteMobs worlds are now protected from player and projectile damage, not just interaction. - [Fix] Resistance damage reduction config migrated to resistanceDamageMultiplierV2 with a new default of 0.2, matching vanilla behavior (Resistance I = 20% reduction, Resistance V = immunity). This should fix a bug where some players would become unkillable. - [Tweak] Treasure chest loot in dynamic dungeons now scales to the dungeon's selected level instead of using the static chest tier. Outside of instances, scalable loot follows the opening player's gear level. - [Tweak] Treasure chest mimics with dynamic level (-1) now scale to the dungeon's selected level in instances, or to the opening player's gear level in the overworld, instead of always using the static chest tier. - [Tweak] Treasure chest restock timers are now pruned on access — expired entries are cleaned up and saved to disk automatically instead of accumulating indefinitely. - [Tweak] Translation system now strips translatable keys from YAML config file